# dlai-study-pack

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.en.md  README.md  pyproject.toml  scholarium.json
skills/dlai-write-lesson-notes/: SKILL.md
skills/dlai-write-lesson-notes/agents/: openai.yaml
skills/dlai-write-lesson-notes/scripts/: lesson_notes.py
skills/scholarium-localize/: SKILL.md
skills/scholarium-localize/agents/: openai.yaml
skills/scholarium-localize/scripts/: localize_pack.py
skills/scholarium-notes/: SKILL.md
skills/scholarium-notes/agents/: openai.yaml
skills/scholarium-notes/scripts/: lesson_notes.py
src/dlai_study_pack/: __init__.py  code_assets.py  parser.py  text.py
src/dlai_transcript_extractor/: __init__.py  cli.py  crawler.py  fetchers.py  text.py  writer.py
src/scholarium/: __init__.py  cli.py  code_assets.py  crawler.py  fetchers.py  text.py  writer.py
src/study/: cli.py  code_assets.py  writer.py
tests/: test_cli.py  test_code_assets.py  test_crawler.py  test_fetchers.py  test_parser.py  test_skill_lesson_notes.py  test_skill_localize_pack.py  test_text.py  test_writer.py
