[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dlai-transcript-extractor"
version = "0.1.0"
description = "Extract DeepLearning.AI course lesson transcripts to Markdown."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
dlai-transcripts = "dlai_transcript_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
